--- a/mysite03/src/main/webapp/assets/css/board.css
+++ b/mysite03/src/main/webapp/assets/css/board.css
@@ -72,7 +72,7 @@ input#kwd	{
 	width: 480px;
 }
 
-.board-form .tbl-ex textarea#contents {
+.board-form .tbl-ex textarea#content {
 	width: 470px;
 	height: 200px;
 	padding: 10px;
